--- a/package.json
+++ b/package.json
@@ -15,8 +15,26 @@
   },
   "dependencies": {
     "gatsby": "^2.21.0",
+    "gatsby-plugin-google-analytics": "^2.3.1",
+    "gatsby-plugin-less": "^3.2.0",
+    "gatsby-plugin-manifest": "^2.4.2",
+    "gatsby-plugin-netlify": "^2.3.2",
+    "gatsby-plugin-nprogress": "^2.3.1",
+    "gatsby-plugin-offline": "^3.2.1",
+    "gatsby-plugin-purgecss": "^5.0.0",
+    "gatsby-plugin-react-helmet": "^3.3.0",
+    "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-sitemap": "^2.4.2",
+    "gsap": "^3.2.6",
+    "jquery": "^3.5.0",
+    "less": "^3.11.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0",
+    "react-sidebar": "^3.0.2",
+    "scrollmagic": "^2.0.7",
+    "scrollmagic-plugin-gsap": "^1.0.4",
+    "splitting": "^1.0.6"
   },
   "devDependencies": {
     "prettier": "2.0.5"
