--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.21.0",
+    "browser-monads": "^1.0.0",
+    "gatsby": "^2.10.4",
     "gatsby-plugin-google-analytics": "^2.3.1",
     "gatsby-plugin-less": "^3.2.0",
     "gatsby-plugin-manifest": "^2.4.2",
