--- a/package.json
+++ b/package.json
@@ -32,9 +32,15 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-router-dom": "^5.1.2",
+    "react-scroll": "^1.7.16",
+    "react-scrollspy": "^3.4.2",
+    "react-scrollspy-nav": "^1.2.4",
     "react-sidebar": "^3.0.2",
+    "react-waypoint": "^9.0.2",
     "scrollmagic": "^2.0.7",
     "scrollmagic-plugin-gsap": "^1.0.4",
+    "smoothscroll-polyfill": "^0.4.4",
     "splitting": "^1.0.6"
   },
   "devDependencies": {
