--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "browser-monads": "^1.0.0",
     "gatsby": "^2.10.4",
     "gatsby-plugin-google-analytics": "^2.3.1",
     "gatsby-plugin-less": "^3.2.0",
@@ -24,11 +23,12 @@
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
-    "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sitemap": "^2.4.2",
     "gsap": "^3.2.6",
     "jquery": "^3.5.0",
     "less": "^3.11.1",
+    "particles-bg": "^2.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
