--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "gsap": "^3.2.6",
     "jquery": "^3.5.0",
     "less": "^3.11.1",
-    "particles-bg": "^2.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-particles-js": "^3.2.1",
     "react-router-dom": "^5.1.2",
     "react-scroll": "^1.7.16",
     "react-scrollspy": "^3.4.2",
