--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gatsby-plugin-less": "^3.2.0",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-netlify": "^2.3.2",
-    "gatsby-plugin-nprogress": "^2.3.1",
+    "gatsby-plugin-nprogress": "^2.3.4",
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
@@ -28,6 +28,7 @@
     "gsap": "^3.2.6",
     "jquery": "^3.5.0",
     "less": "^3.11.1",
+    "nprogress": "^0.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
