--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-scrollspy": "^3.4.2",
     "react-scrollspy-nav": "^1.2.4",
     "react-sidebar": "^3.0.2",
+    "react-spinner-material": "^1.3.1",
     "react-waypoint": "^9.0.2",
     "scrollmagic": "^2.0.7",
     "scrollmagic-plugin-gsap": "^1.0.4",
